--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -40,6 +40,19 @@ a{
   text-decoration: none;
 }
 
+.upwork-img img{
+  width: 40px;
+  margin-right:10px;
+  margin-left:10px;
+  margin-top:10px;
+}
+
+.fiverr-img img{
+  width: 75px;
+  margin-right:10px;
+  margin-top:5px;
+}
+
 button{
   background:#149ddd;
   color: #fff;
