--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
 .footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -7,6 +6,8 @@
     color: rgb(255, 255, 255);
     text-align: center;
     vertical-align: middle;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   .footer p{
       margin: 10px 0px ;
