--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <app-curriculum-vitae></app-curriculum-vitae>
     <app-projects></app-projects>
     <app-references></app-references>
-    <app-contact></app-contact>
+    <!-- <app-contact></app-contact> -->
     <footer class="footer">
         <p> Copyright © 2023-<span>{{currentYear}}</span> By Hafiz Umer Farooq.</p>
     </footer>
