--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,7 @@
         <div class="home p-1 rounded">
             <ul class="navbar-nav">
                 <li class="nav-item p-1 rounded">
-                    <a class="nav-link smooth-scroll text-uppercase" href="#"><i class='bx bx-home'></i> {{'header.home'
-                        | translate}}
+                    <a class="nav-link smooth-scroll text-uppercase" href="#"><i class='bx bx-home'></i> Home
                     </a>
                 </li>
             </ul>
@@ -17,12 +16,12 @@
                 <ul class="navbar-nav" style=" float: right;">
                     <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#about"><i
-                                class='bx bx-user'></i> {{'header.about' | translate}}
+                                class='bx bx-user'></i> About
                         </a>
                     </li>
                     <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#skills"><i
-                                class='bx bx-briefcase-alt'></i>{{'header.skills' | translate}}</a>
+                                class='bx bx-briefcase-alt'></i>Skills</a>
                     </li>
                     <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#cv"> <i
@@ -34,25 +33,15 @@
                     </li>
                     <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#references"><i
-                                class='bx bxs-badge-check'></i> {{'header.references' | translate}}</a>
+                                class='bx bxs-badge-check'></i> References</a>
                     </li>
                     <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#contact"> <i
-                                class='bx bx-envelope'></i>{{'header.contactMe' | translate}}</a>
+                                class='bx bx-envelope'></i>Contact me</a>
                     </li>
-                    <!-- <li class="nav-item p-1 rounded">
-                        <mat-radio-group  [(ngModel)]="language" style="margin-top: 5px;"
-                            (change)="languageChange($event)" aria-label="Select a language">
-                            <mat-radio-button value="en" >
-                                English
-                            </mat-radio-button>
-                            <mat-radio-button value="fr" class="pl-3">
-                                Français
-                            </mat-radio-button>
-                        </mat-radio-group>
-                    </li> -->
                 </ul>
             </div>
         </div>
     </nav>
 </header>
+
