--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,11 @@
-<section id="home" [ngStyle]="{backgroundImage:'url(assets/images/home-background.jpg)'}" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container aos-init aos-animate" data-aos="fade-in">
-        <h1 class="mt-3">Hafiz Umer Farooq</h1>
-        <p>MEAN & MERN Stack Developer <span class="typed"></span></p>
-    </div>
+<section
+  id="home"
+  [ngStyle]="{ backgroundImage: 'url(assets/images/home-background.jpg)' }"
+  class="d-flex flex-column justify-content-center align-items-center"
+>
+  <div class="hero-container aos-init aos-animate" data-aos="fade-in">
+    <h1 class="mt-3">Hafiz Umer Farooq</h1>
+    <p>MEAN & MERN Stack Developer <span class="typed"></span></p>
+  </div>
 </section>
+
