--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -1,59 +1,44 @@
-<section id="references">
-    <div class="container mb-5">
-        <h2><strong>Clients Reviews</strong></h2>
-        <span class="bar-title mb-5"></span>
-        <div class="card shadow-lg  rounded pb-3" data-aos="fade-right" data-aos-delay="300">
-            <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselIndicators" data-slide-to="0" class="not-active active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="1" class="not-active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="2" class="not-active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="3" class="not-active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="4" class="not-active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="5" class="not-active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="6" class="not-active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="7" class="not-active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="8" class="not-active"></li>
-                </ol>
-                <div class="carousel-inner" >
-                    <div class="carousel-item" [ngClass]="{active:index==0}" *ngFor="let reference of references;let index=index">
-                        <div class="d-block w-100">
-                            <div class="row">
-                                <div class="col-lg-2 ml-4 mr-4 col-sm-12">
-                                    <div class="row">
-                                        <!-- <div class="mt-4">
-                                            <img class="d-block w-100 rounder" src="{{reference.personImg}}"
-                                                alt="slide">
-                                        </div> -->
-                                    </div>
-                                    <!-- <div class="row">
-                                        <div class="mt-3">
-                                            <h5>{{reference.personFullname}}</h5>
-                                        </div>
-                                    </div> -->
-                                    <!-- <div class="row">
-                                        <div class="mt-2 ">
-                                            <h5><small>{{reference.personPosition}}</small></h5>
-                                        </div>
-                                    </div> -->
-                                    <!-- <div class="row">
-                                        <div class="mt-2 ">
-                                            <span class="text-uppercase"><strong>{{reference.personCompany}}</strong></span>
-                                        </div>
-                                    </div> -->
-                                </div>
-                                <div class="card-body ml-4 mr-3 mt-4 col-lg-9 col-sm-12">
-                                    <div class="row">
-                                        <span><img class="d-block w-100 rounder" [src]="reference.reviewImage"
-                                            >
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div id="carouselExampleIndicators" class="container carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/images/Client_2.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/Client_3.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/Client_4.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/Client_5.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/Client_6.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/Client_7.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/Client_8.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/Client_9.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/images/Client_1.png" alt="Third slide">
+      </div>
     </div>
-</section>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
